# mcusec

./: .gitignore  AuthenicatedCallProvider.h  AuthenticatedCallProvider.h  CMakeLists.txt  Crypt.h  KeyManager.h  LICENSE  Xorshift.h  crypt.h  main.cpp  sha-fast.cpp  test.cpp
keygen/: keygen.py
vhdl/: ring_osc.vhd  ring_osc_intel.vhd  ring_osc_lattice.vhd  ring_osc_sim.vhd  ring_osc_xilinx.vhd  trng.vhd
